# corporate-transparency-analysis

./: .env.example  .gitignore  README.md  pnpm-lock.yaml  pyproject.toml
.cursor/rules/python-coding-standards/: RULE.md
frontend/: README.md  pnpm-lock.yaml
frontend/app/: page.tsx
frontend/app/api/analyze/: route.ts
scripts/: basic_analysis.py  edgar_integration.py  financial_data_fetcher.py  generate_usage_purpose_pdf.py  integrated_analysis.py  japan_corporate_fetcher.py  name_variant_integration.py  sugartrail_integration.py
src/app/: layout.tsx  page.tsx
src/app/api/analyze/: route.ts
src/backend/: analysis_logger.py  api_server.py  basic_analysis.py  edgar_integration.py  financial_data_fetcher.py  generate_usage_purpose_pdf.py  integrated_analysis.py  japan_corporate_fetcher.py  name_variant_integration.py  political_contributions_integration.py  source_info_generator.py  sugartrail_integration.py
src/components/: AnalysisLog.tsx  EdgarTimeline.tsx  EntitySourceInfo.tsx  EntityTypeChart.tsx  NetworkGraph.tsx  PoliticalContributionsChart.tsx  SourceReferences.tsx
src/components/ui/: button.tsx  select.tsx
