[project]
name = "corporate-transparency-analysis"
version = "0.1.0"
description = "企業・金融の透明性分析ツール - EDGAR、sugartrail、name-variant-searchの統合"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "your.email@example.com" }]
keywords = [
    "corporate-transparency",
    "financial-analysis",
    "edgar",
    "sugartrail",
    "bellingcat",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # 基本パッケージ
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "japanize-matplotlib>=1.1.0",
    # データ処理
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    # ネットワーク分析
    "networkx>=3.0",
    "plotly>=5.17.0",
    # データ可視化
    "graphviz>=0.20.1",
    # ユーティリティ
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    # API統合用
    "ratelimit>=2.2.1",
    # その他
    "httpx>=0.27.0",
    # PDF生成
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.287",
    "mypy>=1.5.0",
]
jupyter = ["jupyter>=1.0.0", "ipykernel>=6.25.0"]
edgar = [
    # EDGAR関連（必要に応じて）
    # "edgartools>=1.0.0",  # EDGARツールのパッケージ名を確認
]

[project.scripts]
basic-analysis = "scripts.basic_analysis:main"
integrated-analysis = "scripts.integrated_analysis:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.287",
    "mypy>=1.5.0",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long, handled by black
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
