[project]
name = "corporate-transparency-analysis"
version = "0.1.0"
description = "企業・金融の透明性分析ツール - EDGAR、sugartrail、name-variant-searchの統合"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "your.email@example.com" }]
keywords = [
    "corporate-transparency",
    "financial-analysis",
    "edgar",
    "sugartrail",
    "bellingcat",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # 基本パッケージ
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "japanize-matplotlib>=1.1.0",
    # データ処理
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    # ネットワーク分析
    "networkx>=3.0",
    "plotly>=5.17.0",
    # データ可視化
    "graphviz>=0.20.1",
    # ユーティリティ
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    # API統合用
    "ratelimit>=2.2.1",
    # その他
    "httpx>=0.27.0",
    # PDF生成
    "reportlab>=4.0.0",
    # EDGARツールの依存関係
    "jsonlines>=4.0.0",
    "tenacity>=8.2.0",
    "xmltodict>=0.13.0",
    "click>=8.1.7",
    "typer>=0.12.5",
    "pydantic>=2.10.5",
    "python-dateutil>=2.9.0",
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.8.0",
    "mypy>=1.5.0",
]
jupyter = ["jupyter>=1.0.0", "ipykernel>=6.25.0"]
edgar = [
    # EDGAR関連（必要に応じて）
    # "edgartools>=1.0.0",  # EDGARツールのパッケージ名を確認
]

[project.scripts]
basic-analysis = "src.backend.basic_analysis:main"
integrated-analysis = "src.backend.integrated_analysis:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.8.0",
    "mypy>=1.5.0",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "node_modules",
    ".next",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PD",  # pandas-vet
    "PL",  # Pylint
    "TRY", # tryceratops
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "PLR0913", # too many arguments
    "PLR2004", # magic value used in comparison
    "TRY003", # avoid specifying long messages outside the exception class
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"scripts/*" = ["T201"]  # print statements in scripts are OK
"tests/*" = ["ARG", "PLR2004"]  # test files can have unused args and magic values

[tool.ruff.lint.isort]
known-first-party = ["scripts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
